MEFA VERSIONS

Version 2.1-2 -- December 11, 2008 (opened - r268)

    * vignette and demo updated: based on changes
      made in the JSS paper due to second revision.
    * as.data.frame: new method to take advantage
      in modeling. It returns a data frame containing
      variables that are to be used in a model
      i.e. glm. Four helper functions are made to
      support this function, but those can be used
      on their own as well (mss, msr, mts, mtr).
    * plot methods: many tiny changes, image method
      now display names, but by default the axes are
      hided and just a box is drawn.
    * citation entries: modified according to accepted
      JSS manuscript.


Version 2.1-1 -- December 11, 2008 (closed - r268)

    * melt.mefa: did not return stcs class if segments
      were present -- bug fixed.
    * mefaTable: xtab.fixed=TRUE behaved like FALSE
      when names had exact match, fixed.
    * demo: got a new ending, by a question for opening
      mefa website.


Version 2.1-0 -- November 17, 2008 (closed - r268)

    * minor release: on CRAN containing additions of
      from 2.0-2 and some polishing.
    * basic object structures and methods: will not change
      in future versions. mefa 2.1 is a yardstick in
      package development. Sorry for any inconveniences
      happened because of restructuring the package.


Version 2.0-2 -- November 12, 2008 (closed - r252)

    * onload text: mefa gives date info when loaded.
    * mefaCompare: compares 2 objects of class mefa,
      based on dimnames and numeric values. Sample
      and taxa tables are not compared.
    * demo: added, based on the vignette (also a tests
      directory to check the demo script).
    * vignette: added to inst/doc based on a manuscript
      submitted to JSS. Dependencies are excluded and
      a verbatim code is placed in the vignette instead.
    * DOLINA data sets: reworked. A more simple example
      is given: dol.count, dol.samp, dol.taxa. The previous