@@ -1,0 +1,12 @@
+'label<-' <-
+function(x, value)
+{
+    attr(x, "label") <- value
+    return(x)
+}
+
+label <-
+function(x)
+{
+    attr(x, "label")
+}
